--- a/ActiveDynamicWall/ActiveDynamicWall.csproj
+++ b/ActiveDynamicWall/ActiveDynamicWall.csproj
@@ -154,6 +154,9 @@
       <Name>BackgroundTaskComponent</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="TimeWallpaper\" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
