Starting a new feature in the app: using image sequences + dayTime to determin when to apply an Image. first step: geo location and SunriseSunser API

--- a/BackgroundTaskComponent/BackgroundTaskComponent.csproj
+++ b/BackgroundTaskComponent/BackgroundTaskComponent.csproj
@@ -108,7 +108,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="BackgroundClass.cs" />
+    <Compile Include="GeoLocatorClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SunriseSunsetAPI.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
